--- a/advanced/am-pattern-1/templates/mi/instance-1/wso2am-pattern-1-mi-deployment.yaml
+++ b/advanced/am-pattern-1/templates/mi/instance-1/wso2am-pattern-1-mi-deployment.yaml
@@ -34,6 +34,7 @@ spec:
       labels:
         deployment: {{ template "am-pattern-1.resource.prefix" . }}-mi
         node: {{ template "am-pattern-1.resource.prefix" . }}-mi-1
+        dev: passed
     spec:
       initContainers:
         - name: init-am
