--- a/advanced/am-pattern-1/values.yaml
+++ b/advanced/am-pattern-1/values.yaml
@@ -96,11 +96,7 @@ wso2:
               xms: "1024m"
               # Maximum Heap size
               xmx: "1024m"
-      mysql:
-        hostname : "apim-profile-automation-database.ccndgaztcixx.us-west-1.rds.amazonaws.com"
-        username : "wso2carbon"
-        password : "wso2carbon"
-        port : "3306"
+
       # If the deployment configurations for the WSO2 API Manager v4.0.0 (<WSO2AM>/repository/conf/deployment.toml),
       # add the customized configuration file under (wso2 -> deployment -> am -> config -> deployment.toml)
       # config:
@@ -112,7 +108,7 @@ wso2:
         management:
           enabled: true
           # Hostname for API Manager Carbon Management Console, Publisher, DevPortal and Admin Portal
-          hostname: "am.wso2.com"
+          hostname: "aee9c0a46ba2e4797b0b92c04d6ef902-32dc859ae659e1b4.elb.us-west-1.amazonaws.com"
           # Annotations for the API Manager Publisher-DevPortal services Ingress
           annotations:
             kubernetes.io/ingress.class: "nginx"
