--- a/advanced/am-pattern-1/templates/am/instance-2/wso2am-pattern-1-am-conf.yaml
+++ b/advanced/am-pattern-1/templates/am/instance-2/wso2am-pattern-1-am-conf.yaml
@@ -45,15 +45,15 @@ data:
     [database.apim_db]
     type = "mysql"
     url = "jdbc:mysql://{{ .Values.wso2.deployment.am.mysql.hostname }}:{{ .Values.wso2.deployment.am.mysql.port }}/WSO2AM_DB?useSSL=false&amp;autoReconnect=true&amp;requireSSL=false&amp;verifyServerCertificate=false"
-    username = "{{ .Values.wso2.deployment.am.mysql.username }}"
-    password = "{{ .Values.wso2.deployment.am.mysql.password }}"
+    username = "wso2carbon"
+    password = "wso2carbon"
     driver = "com.mysql.cj.jdbc.Driver"
 
     [database.shared_db]
     type = "mysql"
     url = "jdbc:mysql://{{ .Values.wso2.deployment.am.mysql.hostname }}:{{ .Values.wso2.deployment.am.mysql.port }}/WSO2AM_SHARED_DB?useSSL=false&amp;autoReconnect=true&amp;requireSSL=false&amp;verifyServerCertificate=false"
-    username = "{{ .Values.wso2.deployment.am.mysql.username }}"
-    password = "{{ .Values.wso2.deployment.am.mysql.password }}"
+    username = "wso2carbon"
+    password = "wso2carbon"
     driver = "com.mysql.cj.jdbc.Driver"
 
     [keystore.tls]
