--- a/advanced/am-pattern-1/templates/am/instance-2/wso2am-pattern-1-am-deployment.yaml
+++ b/advanced/am-pattern-1/templates/am/instance-2/wso2am-pattern-1-am-deployment.yaml
@@ -38,7 +38,7 @@ spec:
         {{ if .Values.wso2.deployment.dependencies.mysql }}
         - name: init-mysql-db
           image: busybox:1.32
-          command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z "apim-profile-automation-database.ccndgaztcixx.us-west-1.rds.amazonaws.com" 3306; do sleep 1; printf "-"; done; echo -e "  >> MySQL Server has started";']
+          command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z "{{ .Values.wso2.deployment.am.mysql.hostname }}" {{ .Values.wso2.deployment.am.mysql.port }}; do sleep 1; printf "-"; done; echo -e "  >> MySQL Server has started";']
         - name: init-mysql-connector-download
           image: busybox:1.32
           command:
