--- a/advanced/am-pattern-4/values.yaml
+++ b/advanced/am-pattern-4/values.yaml
@@ -84,6 +84,11 @@ wso2:
               # Maximum Heap size
               xmx: "512m"
 
+      mysql:
+        hostname : "apim-profile-automation-database.ccndgaztcixx.us-west-1.rds.amazonaws.com"
+        username : "wso2carbon"
+        password : "wso2carbon"
+        port : "3306"
       # Kubernetes Probes
       # Startup probe executed prior to Liveness Probe taking over
       startupProbe:
@@ -142,7 +147,11 @@ wso2:
             maxSurge: 2
             # The maximum number of pods that can be unavailable during the update
             maxUnavailable: 0
-
+        mysql:
+          hostname : "apim-profile-automation-database.ccndgaztcixx.us-west-1.rds.amazonaws.com"
+          username : "wso2carbon"
+          password : "wso2carbon"
+          port : "3306"
         # If the deployment configurations for the Gateway profile of WSO2 API Manager v4.0.0 (<WSO2AM>/repository/conf/deployment.toml),
         # add the customized configuration file under (wso2 -> deployment -> am -> gateway -> config -> deployment.toml)
         # config:
@@ -154,13 +163,13 @@ wso2:
         # Indicates whether the container is running
         livenessProbe:
           # Number of seconds after the container has started before liveness probes are initiated
-          initialDelaySeconds: 180
+          initialDelaySeconds: 300
           # How often (in seconds) to perform the probe
           periodSeconds: 10
         # Indicates whether the container is ready to service requests
         readinessProbe:
           # Number of seconds after the container has started before readiness probes are initiated
-          initialDelaySeconds: 180
+          initialDelaySeconds: 300
           # How often (in seconds) to perform the probe
           periodSeconds: 10
               # Number of deployment replicas
@@ -185,7 +194,11 @@ wso2:
                   xms: "1024m"
                   # Maximum Heap size
                   xmx: "1024m"
-
+        mysql:
+          hostname : "apim-profile-automation-database.ccndgaztcixx.us-west-1.rds.amazonaws.com"
+          username : "wso2carbon"
+          password : "wso2carbon"
+          port : "3306"
         # If the deployment configurations for the Gateway profile of WSO2 API Manager v4.0.0 (<WSO2AM>/repository/conf/deployment.toml),
         # add the customized configuration file under (wso2 -> deployment -> am -> gateway -> config -> deployment.toml)
         # config:
@@ -198,9 +211,9 @@ wso2:
         # Startup probe executed prior to Liveness Probe taking over
         startupProbe:
           # Number of seconds after the container has started before startup probes are initiated
-          initialDelaySeconds: 60
+          initialDelaySeconds: 200
           # How often (in seconds) to perform the probe
-          periodSeconds: 5
+          periodSeconds: 10
           # Number of attempts
           failureThreshold: 8
         # Indicates whether the container is running
@@ -210,7 +223,7 @@ wso2:
           # Indicates whether the container is ready to service requests
         readinessProbe:
           # Number of seconds after the container has started before readiness probes are initiated
-          initialDelaySeconds: 80
+          initialDelaySeconds: 200
           # How often (in seconds) to perform the probe
           periodSeconds: 10
 
